--- a/templates/components/_header.html
+++ b/templates/components/_header.html
@@ -357,7 +357,7 @@
 
                             <!-- <li><a class="dropdown-item" href="{% url 'FinanceirohListViews' %}">Historico de Acionamentos</a></li> -->
                             <li><a class="dropdown-item" href="{% url 'requisicoes_list' %}">Requisições</a></li>
-                            <li><a class="dropdown-item" href="{% url 'external_vouchers_list' %}">Lista de Vouchers</a></li>                            
+                            <li><a class="dropdown-item" href="{% url 'faturamento_interativo' %}">Nova Tabela</a></li>                            
                           
                             
                         </ul>
