--- a/registrodemanutencao/templates/registro_das_entradas.html
+++ b/registrodemanutencao/templates/registro_das_entradas.html
@@ -241,6 +241,7 @@
                     </div>
                     <div class="col-6">
                         <p class="card-text"><b>Customização:</b> {{ registro.customizacaoo }}</p>
+                        <p class="card-text"><b>Tipo de Contrato:</b> {{ registro.tipo_contrato }}</p>
                         <p class="card-text"><b>Motivo:</b> {{ registro.motivo }}</p>
                         <p class="card-text"><b>Tipo de Produto:</b> {{ registro.tipo_produto }}</p>
                     </div>
